--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
                 <role>PMC</role>
             </roles>
             <organization>pnoker.github.io</organization>
+            <url>https://github.com/pnoker/iot-dc3</url>
         </developer>
     </developers>
 
