--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <groupId>io.github.pnoker</groupId>
     <artifactId>dc3-parent</artifactId>
     <name>${project.artifactId}</name>
-    <version>2024.3.0</version>
+    <version>2024.3.1</version>
     <packaging>pom</packaging>
 
     <inceptionYear>2016-2024</inceptionYear>
@@ -68,8 +68,8 @@
         Spring 相关
         2024.04.30 更新, 全部为最新
         -->
-        <spring.boot.version>3.2.5</spring.boot.version>
-        <spring.cloud.version>2023.0.1</spring.cloud.version>
+        <spring.boot.version>3.3.0</spring.boot.version>
+        <spring.cloud.version>2023.0.2</spring.cloud.version>
 
         <!--
         gRpc 相关
@@ -83,37 +83,37 @@
         <!-- 数据库 相关 -->
         <tdengine.version>3.2.11</tdengine.version>
         <influxdb.version>6.12.0</influxdb.version>
-        <elasticsearch.version>8.13.4</elasticsearch.version>
-        <mybatis.plus.version>3.5.6</mybatis.plus.version>
+        <elasticsearch.version>8.14.0</elasticsearch.version>
+        <mybatis.plus.version>3.5.7</mybatis.plus.version>
 
         <!-- 通用工具 -->
         <jwt.version>0.12.5</jwt.version>
         <okhttp.version>4.12.0</okhttp.version>
-        <netty.version>4.1.109.Final</netty.version>
+        <netty.version>4.1.110.Final</netty.version>
         <commons.io.version>2.16.1</commons.io.version>
         <jakarta.json.version>2.1.3</jakarta.json.version>
         <javax.annotation.version>1.3.2</javax.annotation.version>
-        <jakarta.validation.version>3.0.2</jakarta.validation.version>
+        <jakarta.validation.version>3.1.0</jakarta.validation.version>
         <jakarta.annotation.version>3.0.0</jakarta.annotation.version>
         <hibernate.validator.version>8.0.1.Final</hibernate.validator.version>
         <lombok.version>1.18.32</lombok.version>
         <mapstruct.version>1.5.5.Final</mapstruct.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
-        <hutool.version>5.8.27</hutool.version>
-        <guava.version>33.2.0-jre</guava.version>
+        <hutool.version>5.8.28</hutool.version>
+        <guava.version>33.2.1-jre</guava.version>
 
         <!-- 其他依赖-->
         <spring-oauth2.version>2.5.2.RELEASE</spring-oauth2.version>
         <spring.cloud.nacos.version>2023.0.1.0</spring.cloud.nacos.version>
         <nacos.client.version>2.3.2</nacos.client.version>
-        <micrometer.version>1.13.0</micrometer.version>
+        <micrometer.version>1.13.1</micrometer.version>
         <velocity.version>2.3</velocity.version>
         <apache.poi.version>5.2.5</apache.poi.version>
-        <apache.commons.version>1.26.1</apache.commons.version>
+        <apache.commons.version>1.26.2</apache.commons.version>
         <activation.version>2.1.3</activation.version>
         <xxl.job.version>2.4.1</xxl.job.version>
         <jna.version>5.14.0</jna.version>
-        <oshi.version>6.6.0</oshi.version>
+        <oshi.version>6.6.1</oshi.version>
         <milo.version>0.6.13</milo.version>
         <paho.mqttv3.version>1.2.5</paho.mqttv3.version>
         <bouncycastle.version>1.78.1</bouncycastle.version>
@@ -129,14 +129,15 @@
          -->
         <protobuf.plugin.version>0.6.1</protobuf.plugin.version>
         <os.maven.plugin.version>1.7.1</os.maven.plugin.version>
+        <graalvm.native.version>0.10.2</graalvm.native.version>
         <maven.gpg.plugin>3.2.4</maven.gpg.plugin>
         <maven.source.plugin>3.3.1</maven.source.plugin>
-        <maven.javadoc.plugin>3.6.3</maven.javadoc.plugin>
+        <maven.javadoc.plugin>3.7.0</maven.javadoc.plugin>
         <maven.compiler.plugin>3.13.0</maven.compiler.plugin>
         <maven.resource.plugin>3.3.1</maven.resource.plugin>
         <maven.dependency.plugin>3.6.1</maven.dependency.plugin>
         <maven.version.plugin>2.16.2</maven.version.plugin>
-        <maven.nexus.plugin.version>1.6.13</maven.nexus.plugin.version>
+        <maven.nexus.plugin.version>1.7.0</maven.nexus.plugin.version>
     </properties>
 
     <profiles>
@@ -147,6 +148,17 @@
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>versions-maven-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>native</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.graalvm.buildtools</groupId>
+                        <artifactId>native-maven-plugin</artifactId>
                     </plugin>
                 </plugins>
             </build>
@@ -786,6 +798,22 @@
                             <goals>
                                 <goal>repackage</goal>
                             </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+
+                <!-- Graalvm 插件 -->
+                <plugin>
+                    <groupId>org.graalvm.buildtools</groupId>
+                    <artifactId>native-maven-plugin</artifactId>
+                    <version>${graalvm.native.version}</version>
+                    <executions>
+                        <execution>
+                            <id>build-native</id>
+                            <goals>
+                                <goal>compile-no-fork</goal>
+                            </goals>
+                            <phase>package</phase>
                         </execution>
                     </executions>
                 </plugin>
