--- a/pom.xml
+++ b/pom.xml
@@ -14,14 +14,14 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.github.pnoker</groupId>
     <artifactId>dc3-parent</artifactId>
     <name>${project.artifactId}</name>
-    <version>2024.3.2</version>
+    <version>2024.3.3</version>
     <packaging>pom</packaging>
 
     <inceptionYear>2016-2024</inceptionYear>
@@ -66,25 +66,25 @@
 
         <!--
         Spring related dependencies
-        Updated on 2024.04.30, all latest
+        Updated on 2024.10.24, all latest
         -->
-        <spring.boot.version>3.3.0</spring.boot.version>
+        <spring.boot.version>3.3.4</spring.boot.version>
         <spring.cloud.version>2023.0.2</spring.cloud.version>
 
         <!--
         gRpc related dependencies
-        Updated on 2024.04.29, only protobuf.version cannot use the latest version
+        Updated on 2024.10.24, only protobuf.version cannot use the latest version
         Because the tool that generates stub code has stopped being maintained.
          -->
-        <grpc.version>1.64.0</grpc.version>
+        <grpc.version>1.68.0</grpc.version>
         <protobuf.version>3.25.3</protobuf.version>
         <grpc.spring.boot.version>3.1.0.RELEASE</grpc.spring.boot.version>
 
         <!-- Database related dependencies -->
         <tdengine.version>3.2.11</tdengine.version>
-        <influxdb.version>6.12.0</influxdb.version>
-        <elasticsearch.version>8.14.0</elasticsearch.version>
-        <mybatis.plus.version>3.5.7</mybatis.plus.version>
+        <influxdb.version>7.2.0</influxdb.version>
+        <elasticsearch.version>8.15.3</elasticsearch.version>
+        <mybatis.plus.version>3.5.9</mybatis.plus.version>
 
         <!-- General tools -->
         <jwt.version>0.12.5</jwt.version>
@@ -96,11 +96,11 @@
         <jakarta.validation.version>3.1.0</jakarta.validation.version>
         <jakarta.annotation.version>3.0.0</jakarta.annotation.version>
         <hibernate.validator.version>8.0.1.Final</hibernate.validator.version>
-        <lombok.version>1.18.32</lombok.version>
-        <mapstruct.version>1.5.5.Final</mapstruct.version>
+        <lombok.version>1.18.34</lombok.version>
+        <mapstruct.version>1.6.2</mapstruct.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
-        <hutool.version>5.8.28</hutool.version>
-        <guava.version>33.2.1-jre</guava.version>
+        <hutool.version>5.8.32</hutool.version>
+        <guava.version>33.3.1-jre</guava.version>
 
         <!-- Other dependencies -->
         <spring-oauth2.version>2.5.2.RELEASE</spring-oauth2.version>
@@ -113,22 +113,21 @@
         <activation.version>2.1.3</activation.version>
         <xxl.job.version>2.4.1</xxl.job.version>
         <jna.version>5.14.0</jna.version>
-        <oshi.version>6.6.1</oshi.version>
+        <oshi.version>6.6.5</oshi.version>
         <milo.version>0.6.13</milo.version>
         <paho.mqttv3.version>1.2.5</paho.mqttv3.version>
         <bouncycastle.version>1.78.1</bouncycastle.version>
         <j.interop.version>3.0.0</j.interop.version>
-        <jackson.version>2.17.1</jackson.version>
+        <jackson.version>2.18.0</jackson.version>
         <jaxb.api.version>2.3.1</jaxb.api.version>
         <jaxb.version>4.0.5</jaxb.version>
         <snakeyaml.version>2.2</snakeyaml.version>
 
         <!-- 
-        plugin related dependencies
+        Plugin related dependencies
         Updated on 2024.04.30, all latest
          -->
         <protobuf.plugin.version>0.6.1</protobuf.plugin.version>
-        <os.maven.plugin.version>1.7.1</os.maven.plugin.version>
         <graalvm.native.version>0.10.2</graalvm.native.version>
         <maven.gpg.plugin>3.2.4</maven.gpg.plugin>
         <maven.source.plugin>3.3.1</maven.source.plugin>
@@ -791,30 +790,11 @@
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
                     <version>${spring.boot.version}</version>
-                    <configuration>
-                        <finalName>${project.build.finalName}</finalName>
-                    </configuration>
                     <executions>
                         <execution>
                             <goals>
                                 <goal>repackage</goal>
                             </goals>
-                        </execution>
-                    </executions>
-                </plugin>
-
-                <!-- Graalvm plugin -->
-                <plugin>
-                    <groupId>org.graalvm.buildtools</groupId>
-                    <artifactId>native-maven-plugin</artifactId>
-                    <version>${graalvm.native.version}</version>
-                    <executions>
-                        <execution>
-                            <id>build-native</id>
-                            <goals>
-                                <goal>compile-no-fork</goal>
-                            </goals>
-                            <phase>package</phase>
                         </execution>
                     </executions>
                 </plugin>
@@ -840,6 +820,22 @@
                                 <goal>compile</goal>
                                 <goal>compile-custom</goal>
                             </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+
+                <!-- Graalvm plugin -->
+                <plugin>
+                    <groupId>org.graalvm.buildtools</groupId>
+                    <artifactId>native-maven-plugin</artifactId>
+                    <version>${graalvm.native.version}</version>
+                    <executions>
+                        <execution>
+                            <id>build-native</id>
+                            <goals>
+                                <goal>compile-no-fork</goal>
+                            </goals>
+                            <phase>package</phase>
                         </execution>
                     </executions>
                 </plugin>
